--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,7 +11,9 @@
 <body>
   <h1>Olá,mundo!</h1>
   <hr>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, iure quam praesentium sunt molestias quaerat autem, nisi atque ipsam nesciunt est quia. Quod earum doloribus omnis voluptatibus, id numquam aspernatur.</p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, iure quam praesentium sunt molestias quaerat autem, nisi atque ipsam nesciunt est quia. Quod earum doloribus omnis voluptatibus, id numquam aspernatur.</p>
+  <p>
 </body>
 
 </html>
